fix invisible svgs on iOS

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,3 +14,7 @@ body {
 iframe {
 	outline: none !important;
 }
+
+svg {
+	height: 100%;
+}
